# llm_evaluation_in_reasoning

./: README.md  README_zh.md  pyproject.toml  run.py
.github/workflows/: publish-pypi-release.yml  publish-to-test-pypi.yml
data/: dataloader.py
docs/: _config.yml  index.md
docs/API/: basebenchmodel.md
docs/apis/: basebenchmodel.md  index.md
eval/: model.py  scorer.py
models/: dataloader.py
src/: app.py
src/data/: dataloader.py
src/eval/: scorer.py
src/llm_evaluation_in_reasoning/data/: dataloader.py
src/llm_evaluation_in_reasoning/eval/: model.py
utils/: models.py  scorers.py
