[project]
name = "llm_evaluation_in_reasoning"
version = "0.1.0"
description = "A project for the evaluation of reasoning in the LLM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fire",
    "litellm==1.54.1",
    "python-dotenv",
    "datasets",
    "pathlib",
    "colorlog",
    "rich"
]

[[tool.mypy.overrides]]
module = "datasets"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fire"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "colorlog"
ignore_missing_imports = true

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
llm_eval = "src.app:app"

[tool.setuptools.packages]
find = { where = ["src"] }